thy/Examples/IPPartEval/config_memphis_testbed/iptables-save
# Generated by iptables-save v1.4.21 on Thu Jun 11 17:03:39 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [17932:82948800]
:LOG_DROP - [0:0]
:LOG_RECENT_DROP - [0:0]
:filter_DEFAULT - [0:0]
:filter_FORWARD - [0:0]
:filter_INPUT - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED,UNTRACKED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 -j LOG_DROP
-A INPUT -s 127.0.0.0/8 -j LOG_DROP
-A INPUT -j filter_INPUT
-A FORWARD -m state --state RELATED,ESTABLISHED,UNTRACKED -j ACCEPT
-A FORWARD -s 127.0.0.0/8 -j LOG_DROP
-A FORWARD -j filter_FORWARD
-A OUTPUT -o lo -j ACCEPT
-A LOG_DROP -m limit --limit 100/min -j LOG --log-prefix "[IPT_DROP]:"
-A LOG_DROP -j DROP
-A LOG_RECENT_DROP -m limit --limit 100/min -j LOG --log-prefix "[IPT_RECENT_DROP]:"
-A LOG_RECENT_DROP -j DROP
-A filter_DEFAULT -p icmp -j ACCEPT
-A filter_DEFAULT -m limit --limit 100/min -j REJECT --reject-with icmp-port-unreachable
-A filter_DEFAULT -j DROP
-A filter_FORWARD -s 131.159.14.0/23 -d 145.30.196.192/27 -j ACCEPT
-A filter_FORWARD -s 131.159.20.0/24 -d 145.30.196.192/27 -j ACCEPT
-A filter_FORWARD -s 62.49.116.32/32 -d 145.30.196.192/27 -j ACCEPT
-A filter_FORWARD -s 30.176.136.35/32 -d 145.30.196.192/27 -j ACCEPT
-A filter_FORWARD -d 236.49.232.75/32 -j ACCEPT
-A filter_FORWARD -s 145.30.196.192/27 -j ACCEPT
-A filter_FORWARD -d 145.30.196.221/32 -j ACCEPT
-A filter_FORWARD -d 145.30.196.217/32 -j ACCEPT
-A filter_FORWARD -j filter_DEFAULT
-A filter_INPUT -p tcp -m state --state NEW -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m multiport --dports 10022,53 -j ACCEPT
-A filter_INPUT -p udp -m state --state NEW -m udp --dport 53 -j ACCEPT
-A filter_INPUT -s 62.49.116.32/32 -j ACCEPT
-A filter_INPUT -s 30.176.136.35/32 -j ACCEPT
-A filter_INPUT -s 145.30.196.192/27 -j ACCEPT
-A filter_INPUT -d 145.30.196.221/32 -j ACCEPT
-A filter_INPUT -d 145.30.196.217/32 -j ACCEPT
-A filter_INPUT -j filter_DEFAULT
-A filter_INPUT -s 236.49.232.75/32 -j ACCEPT
COMMIT
# Completed on Thu Jun 11 17:03:39 2015
